[project]
name = "multi-query-rag"
version = "0.1.0"
description = "RAG system with multi-query support for medical reports"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
rag-query = "multi_query_rag.main:main"
rag-seed = "multi_query_rag.seed:main"

[tool.setuptools.packages.find]
where = ["src"]